# wallshader

./: .gitmodules  CMakeLists.txt  README.md  main.cpp  main.rc  resource.h
.github/workflows/: cmake.yml
depends/: sdl2.cmake
resources/: main.rc  resource.h
src/: ControlWindow.cpp  ControlWindow.hpp  WallpaperWindow.cpp  WallpaperWindow.hpp  main.cpp
src/ControlPanel/: ControlWindow.cpp  ControlWindow.hpp  main.hpp
src/SharedLogic/: Project.cpp  Project.hpp  Utils.cpp  Utils.hpp
src/Wallpaper/: WallpaperWindow.cpp  main.cpp
